--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,12 +170,15 @@ body {
    }
    @media (max-width: 1025px) {
       font-size: 20px;
+      letter-spacing: 6px;
    }
    @media (max-width: 769px) {
       font-size: 18px;
+      letter-spacing: 5px;
    }
    @media (max-width: 661px) {
       font-size: 14px;
+      letter-spacing: 4px;
       &::before {
          width: 50px;
          top: 50%;
@@ -184,6 +187,7 @@ body {
    }
    @media (max-width: 426px) {
       font-size: 9px;
+      letter-spacing: 3px;
       &::before {
          width: 30px;
          top: 50%;
@@ -212,7 +216,7 @@ body {
    display: flex;
 
    &__btn-left {
-      padding: 9%;
+      padding: 9% 9% 9% 0;
       position: relative;
       display: flex;
       justify-content: center;
@@ -1060,10 +1064,8 @@ body {
    &__world {
       align-content: stretch;
       position: relative;
-      padding: 0px 70px;
       margin: 0px 0px 60px 0px;
       @media (max-width: 1025px) {
-         padding: 0px 60px;
          margin: 0px 0px 50px 0px;
       }
       @media (max-width: 769px) {
@@ -1093,7 +1095,12 @@ body {
       flex-direction: column;
       align-items: end;
       position: relative;
+      padding: 0px 70px;
+      @media (max-width: 1025px) {
+         padding: 0px 60px;
+      }
       @media (max-width: 769px) {
+         padding: 0px 10px;
          margin: 0px 0px 30px 0px;
       }
       @media (max-width: 660px) {
@@ -1112,6 +1119,10 @@ body {
    &__cards {
       height: 100%;
       width: 100%;
+      padding: 0px 70px;
+      @media (max-width: 1025px) {
+         padding: 0px 60px;
+      }
    }
 
    
@@ -1611,6 +1622,16 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      margin: 0px 0px 130px 0px;
+      @media (max-width: 1025px) {
+         margin: 0px 0px 120px 0px;
+      }
+      @media (max-width: 769px) {
+         margin: 0px 0px 70px 0px;
+      }
+      @media (max-width: 426px) {
+         margin: 0px 0px 40px 0px;
+      }
    }
 
    &__head {
@@ -1647,35 +1668,39 @@ body {
 
    &__arrows {
       position: absolute;
-      right: 60px;
+      right: 70px;
       top: 220px;
       display: flex;
       opacity: 1;
       z-index: 20;
       @media (max-width: 1025px) {
+         right: 60px;
          top: 200px;
       }
    
       @media (max-width: 769px) {
-         top: 150px;
+         right: 10px;
+         top: 130px;
       }
    
       @media (max-width: 660px) {
-         top: 0px;
+         top: 90px;
       }
       @media (max-width: 426px) {
-         top: 0px;
+         top: 70px;
       }
    }
 
    &__arrow-left {
       cursor: pointer;
-      margin: 0px 20px 0px 0px;
+      padding: 10px;
+      transform: rotate(-180deg);
    }
 
    &__arrow-right {
       cursor: pointer;
-      transform: rotate(-180deg);
+      padding: 10px;
+      
    }
 
    &__main-content {
@@ -1780,18 +1805,20 @@ body {
       align-items: end;
       margin: 90px 70px 0px -150px;
       @media (max-width: 1441px) {
-         margin: 90px 60px 0px -150px;
+         margin: 90px 70px 0px -150px;
       }
-   
-      @media (max-width: 769px) {
+      @media (max-width: 1025px) {
          margin: 70px 60px 0px -150px;
+      }
+      @media (max-width: 769px) {
+         margin: 20px 10px 0px -150px;
       }
    
       @media (max-width: 660px) {
-         margin: 60px 60px 0px -150px;
+         margin: 20px 10px 0px -150px;
       }
       @media (max-width: 425px) {
-         margin: 40px 60px 0px -150px;
+         margin: 20px 10px 0px -150px;
       }
    }
 
@@ -1968,28 +1995,28 @@ body {
       display: flex;
       position: absolute;
       right: 0;
-      bottom: -450%;
-      width: 30%;
+      bottom: -200%;
+      width: 20%;
       z-index: 30;
       img {
          width: 100%;
       }
       @media (max-width: 1025px) {
-         bottom: -450%;
+         bottom: -200%;
       }
 
       @media (max-width: 769px) {
-         bottom: -350%;
+         bottom: -100%;
       }
 
       @media (max-width: 661px) {
-         bottom: -380%;
+         bottom: -130%;
       }
       @media (max-width: 540px) {
-         bottom: -280%;
+         bottom: -30%;
       }
       @media (max-width: 426px) {
-         bottom: -150%;
+         bottom: -30%;
       }
    }
 }
@@ -1998,7 +2025,7 @@ body {
 
 .page {
 
-   &__travel {}
+   &__sleep {}
 }
 
 .sleep {
@@ -2010,6 +2037,17 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      @media (max-width: 1025px) {
+         margin: 0px 0px 120px 0px;
+      }
+   
+      @media (max-width: 769px) {
+         margin: 0px 0px 70px 0px;
+      }
+   
+      @media (max-width: 426px) {
+         margin: 0px 0px 40px 0px;
+      }
    }
 
    &__head {
@@ -2054,39 +2092,38 @@ body {
       display: flex;
       opacity: 1;
       z-index: 20;
-
       @media (max-width: 1025px) {
+         right: 60px;
          top: 200px;
       }
-
       @media (max-width: 769px) {
-         top: 150px;
+         right: 10px;
+         top: 130px;
       }
-
       @media (max-width: 660px) {
-         top: 0px;
+         top: 90px;
       }
-
       @media (max-width: 426px) {
-         top: 0px;
+         top: 70px;
       }
    }
 
    &__arrow-left {
       cursor: pointer;
-      margin: 0px 20px 0px 0px;
+      transform: rotate(-180deg);
+      padding: 10px;
    }
 
    &__arrow-right {
       cursor: pointer;
-      transform: rotate(-180deg);
+      padding: 10px;
    }
 
    &__main-content {
       display: flex;
       flex-direction: column;
       opacity: 0;
-      transition: all 0.3s ease-in-out;
+      transition: opacity 0.3s ease-in-out;
       position: relative;
    }
 
@@ -2159,6 +2196,7 @@ body {
 
    &__button {
       position: relative;
+      
    }
 }
 
@@ -2196,19 +2234,21 @@ body {
       margin: 90px 70px 0px -150px;
 
       @media (max-width: 1441px) {
-         margin: 90px 60px 0px -150px;
+         margin: 90px 70px 0px -150px;
       }
-
-      @media (max-width: 769px) {
+      @media (max-width: 1025px) {
          margin: 70px 60px 0px -150px;
+      }
+      @media (max-width: 769px) {
+         margin: 20px 10px 0px -150px;
       }
 
       @media (max-width: 660px) {
-         margin: 60px 60px 0px -150px;
+         margin: 20px 10px 0px -150px;
       }
 
       @media (max-width: 425px) {
-         margin: 40px 60px 0px -150px;
+         margin: 20px 10px 0px -150px;
       }
    }
 
@@ -2307,6 +2347,7 @@ body {
       padding: 0px 30px;
       display: flex;
       flex-direction: column;
+      min-height: 96px;
       @media (max-width: 1025px) {
          padding: 0px 20px;
       }
@@ -2317,7 +2358,7 @@ body {
 
       @media (max-width: 425px) {
          flex: 1 1 50%;
-         margin: 0px 0px 40px 0px;
+         margin: 0px 0px 20px 0px;
          display: flex;
       }
    }
@@ -2364,25 +2405,18 @@ body {
       line-height: 90%;
       position: relative;
       white-space: nowrap;
-      margin: 0px 0px 15px 0px;
       @media (max-width: 1110px) {
          font-size: 35px;
-         margin: 0px 0px 10px 0px;
       }
-
       @media (max-width: 1025px) {
          font-size: 27px;
       }
-
       @media (max-width: 769px) {
          font-size: 22px;
-         margin: 0px 0px 5px 0px;
       }
-
       @media (max-width: 661px) {
          font-size: 18px;
       }
-
       @media (max-width: 426px) {
          font-size: 20px;
       }
@@ -2394,6 +2428,7 @@ body {
       line-height: 22px;
       text-align: right;
       letter-spacing: 8px;
+      transition: 0s;
       text-transform: uppercase;
       color: #FFFFFF;
       mix-blend-mode: normal;
@@ -2431,7 +2466,7 @@ body {
 
    &__but {
       cursor: pointer;
-      padding: 8px;
+      padding: 15px;
       font-size: 30px;
       color: #4AF6CD;
       font-weight: 800;
@@ -2439,7 +2474,13 @@ body {
       text-transform: none;
       text-shadow: 0px 0px 15px #4AF6CD;
       &:not(:last-child){
-         margin: 0px 25px 0px 0px;
+         margin: 0px 5px 0px 0px;
+      }
+      @media (max-width: 769px) {
+         padding: 12px;
+      }
+      @media (max-width: 426px) {
+         padding: 10px;
       }
    }
 }
@@ -2451,46 +2492,558 @@ body {
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      height: 100%;
    }
 
    &__image {
       display: flex;
       position: absolute;
       right: 0;
-      bottom: -450%;
-      width: 30%;
+      bottom: -200%;
+      width: 20%;
       z-index: 50;
       img {
          width: 100%;
       }
 
       @media (max-width: 1025px) {
-         bottom: -450%;
+         bottom: -200%;
       }
 
       @media (max-width: 769px) {
-         bottom: -350%;
+         bottom: -100%;
       }
 
       @media (max-width: 661px) {
-         bottom: -380%;
+         bottom: -130%;
       }
 
       @media (max-width: 540px) {
-         bottom: -280%;
+         bottom: -30%;
       }
 
       @media (max-width: 426px) {
-         bottom: -150%;
+         bottom: -30%;
       }
    }
 }
 
+/*================Shop===============================*/
 
+.page {
 
+   &__shop {}
+}
 
+.shop {
 
+   &__container {}
 
+   &__body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+   }
+
+   &__head {
+      display: flex;
+      width: 100%;
+      justify-content: start;
+      margin: 0px 0px 50px 0px;
+
+      @media (max-width: 1025px) {
+         margin: 0px 0px 20px 0px;
+      }
+
+      @media (max-width: 769px) {
+         margin: 0px 0px 0px 0px;
+      }
+   }
+
+   &__title {
+      margin: 0px 0px 0px 294px;
+
+      @media (max-width: 1025px) {
+         margin: 0px 0px 0px 194px;
+      }
+
+      @media (max-width: 769px) {
+         margin: 0px 0px 0px 94px;
+      }
+
+      @media (max-width: 426px) {
+         margin: 0px 0px 0px 50px;
+      }
+   }
+
+   &__slider-line {
+      position: relative;
+      z-index: 5;
+      width: 100%;
+   }
+
+   &__arrows {
+      position: absolute;
+      right: 60px;
+      top: 0px;
+      display: flex;
+      opacity: 1;
+      z-index: 20;
+
+      @media (max-width: 1025px) {
+         right: 60px;
+      }
+
+      @media (max-width: 769px) {
+         right: 10px;
+      }
+   }
+
+   &__arrow-left {
+      cursor: pointer;
+      transform: rotate(-180deg);
+      padding: 10px;
+   }
+
+   &__arrow-right {
+      cursor: pointer;
+      padding: 10px;
+   }
+
+   &__main-content {
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+      position: relative;
+      z-index: 4;
+   }
+
+   &__main-content-active {
+      opacity: 1;
+      z-index: 10;
+   }
+
+   &__main-content-abs {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+   }
+
+   &__content-box {
+      position: relative;
+      z-index: 5;
+      display: flex;
+      align-items: center;
+      padding: 0px 130px;
+      @media (max-width: 1201px) {
+         padding: 0px 50px;
+      }
+      @media (max-width: 1025px) {
+         padding: 0px 20px;
+      }
+      @media (max-width: 769px) {
+         padding: 0px 10px;
+      }
+      @media (max-width: 581px) {
+         flex-direction: column;
+         justify-content: center;
+         align-items: start;
+      }
+   }
+
+   &__board-info {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      @media (max-width: 580px) {
+         margin: 0px 0px 50px 0px;
+      }
+   }
+
+   &__surf-board {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+
+   &__back-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+   }
+
+   &__image {
+      img {
+            width: 100%;
+         }
+      position: relative;
+      z-index: 2;
+   }
+
+   &__image-gradient {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(ellipse at 72% 50%, rgba(23, 25, 25, 1) 0%, rgba(23, 25, 25, 0.49) 0%, rgba(23, 25, 25, 1) 51%);
+      z-index: 3;
+   }
+}
+
+.info-board {
+
+   &__titles {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      margin: 0px 0px 40px 0px;
+      @media (max-width: 1025px) {
+         margin: 0px 0px 30px 0px;
+      }
+      @media (max-width: 769px) {
+         margin: 0px 0px 20px 0px;
+      }
+   }
+
+   &__sub-title {
+      margin: 0px 0px 14px 0px;
+      &::before {
+         content: "";
+         background: #FFFFFF;
+         opacity: 0.5;
+         width: 80px;
+         height: 1px;
+         position: absolute;
+         top: 50%;
+         left: 100px;
+      }
+      @media (max-width: 1025px) {
+         &::before {
+            width: 60px;
+            left: 90px;
+         }
+      }
+
+      @media (max-width: 769px) {
+         &::before {
+            width: 50px;
+            left: 80px;
+         }
+      }
+   }
+
+   &__small-title {
+      max-width: 480px;
+      line-height: 100%;
+   }
+
+   &__quality-price {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      margin: 0px 0px 70px 0px;
+      @media (max-width: 1025px) {
+         margin: 0px 0px 50px 0px;
+      }
+      @media (max-width: 769px) {
+         margin: 0px 0px 30px 0px;
+      }
+   }
+
+   &__quality {
+      margin: 0px 0px 5px 0px;
+   }
+
+   &__price {
+      font-weight: 800;
+      font-size: 32px;
+      line-height: 125%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      display: flex;
+      justify-content: center;
+      span {
+         align-self: start;
+         font-size: 18px;
+         line-height: 175%;
+         margin: 0px 0px 0px 5px;
+      }
+      @media (max-width: 1025px) {
+         font-size: 25px;
+         span {
+            font-size: 16px;
+            line-height: 160%;
+         }
+      }
+      @media (max-width: 769px) {
+         font-size: 20px;
+         span {
+            font-size: 14px;
+            line-height: 150%;
+         }
+      }
+   }
+
+   &__button {}
+}
+
+.board-surf {
+
+   &__visual {
+      padding: 0px 160px 0px 50px;
+      @media (max-width: 1025px) {
+         padding: 0px 100px 0px 20px;
+      }
+      @media (max-width: 769px) {
+         padding: 0px 80px 0px 20px;
+      }
+      @media (max-width: 660px) {
+         padding: 0px 60px 0px 50px;
+      }
+      @media (max-width: 580px) {
+         padding: 0px 60px 0px 0px;
+      }
+      @media (max-width: 426px) {
+         padding: 0px 20px 0px 0px;
+      }
+   }
+
+   &__visual-box {
+      position: relative;
+   }
+
+   &__board {
+      img {
+         width: 228px;
+         height: 695px;
+      }
+      @media (max-width: 1025px) {
+         img {
+            width: 190px;
+            height: 579px;
+         }
+      }
+      @media (max-width: 660px) {
+         img {
+            width: 160px;
+            height: 487.5px;
+         }
+      }
+   }
+
+   &__tips {
+      position: absolute;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      width: 300%;
+   }
+
+   &__pointer {
+      width: 20px;
+      height: 20px;
+      background-color: #fff;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #4AF6CD;
+      font-size: 40px;
+      position: relative;
+      &::before {
+         content: "";
+         position: absolute;
+         left: 50%;
+         top: 50%;
+         width: 3px;
+         height: 10px;
+         background-color: #4AF6CD;
+         transform: translate(-50%, -50%);
+      }
+   }
+
+   #concave {
+      top: 30%;
+      left: 70%;
+   }
+
+   #fins {
+      top: 90%;
+      left: 20%;
+   }
+
+   #rail {
+      top: 10%;
+      left: 75%;
+   }
+
+   &__decription {
+      //display: none;
+      max-width: 455px;
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 100%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      padding: 0px 0px 0px 80px;
+      &::before {
+         content: "";
+         background: #FFFFFF;
+         opacity: 0.5;
+         width: 50px;
+         height: 1px;
+         position: absolute;
+         top: 50%;
+         left: 30px;
+      }
+      @media (max-width: 1025px) {
+         font-size: 18px;
+         max-width: 350px;
+      }
+
+      @media (max-width: 769px) {
+        font-size: 14px;
+         max-width: 230px;
+         padding: 0px 0px 0px 60px;
+         &::before {
+            width: 30px;
+            left: 30px;
+         }
+      }
+      @media (max-width: 660px) {
+         font-size: 12px;
+         max-width: 200px;
+         padding: 0px 0px 0px 40px;
+         &::before {
+            width: 25px;
+            left: 25px;
+         }
+      }
+      @media (max-width: 426px) {
+         max-width: 180px;
+      }
+   }
+
+   &__extra {
+      align-self: end;
+      display: flex;
+      flex-direction: column;
+   }
+}
+
+.extra-board {
+
+   &__title {
+      font-weight: 800;
+      font-size: 28px;
+      line-height: 143%;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      text-align: center;
+      margin: 0px 0px 28px 0px;
+      @media (max-width: 1025px) {
+         font-size: 20px;
+         margin: 0px 0px 15px 0px;
+      }
+      @media (max-width: 769px) {
+         font-size: 18px;
+         margin: 0px 0px 10px 0px;
+      }
+   }
+
+   &__points {
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      
+   }
+
+   &__column {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      &:not(:last-child) {
+         margin: 0px 65px 0px 0px;
+      }
+      @media (max-width: 1025px) {
+         &:not(:last-child) {
+            margin: 0px 40px 0px 0px;
+         }
+      }
+      @media (max-width: 769px) {
+         &:not(:last-child) {
+            margin: 0px 20px 0px 0px;
+         }
+      }
+   }
+
+   &__img {
+      img {
+         width: 100%;
+      }
+      margin: 0px 0px 36px 0px;
+      flex: 1 1 auto;
+      @media (max-width: 1025px) {
+         margin: 0px 0px 20px 0px;
+      }
+      @media (max-width: 769px) {
+         margin: 0px 0px 10px 0px;
+      }
+   }
+
+   &__name {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 122%;
+      letter-spacing: 8px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      text-align: center;
+      mix-blend-mode: normal;
+      opacity: 0.5;
+      margin: 0px 0px 5px 0px;
+      white-space: nowrap;
+      @media (max-width: 1025px) {
+         font-size: 18px;
+         letter-spacing: 6px;
+      }
+   
+      @media (max-width: 769px) {
+         font-size: 16px;
+         letter-spacing: 2px;
+      }
+   
+      @media (max-width: 661px) {
+         font-size: 12px;
+      }
+   
+      @media (max-width: 426px) {
+         font-size: 9px;
+      }
+   }
+
+   &__price {
+      font-weight: 800;
+      font-size: 18px;
+      line-height: 222%;
+      text-align: center;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      @media (max-width: 1025px) {
+         font-size: 16px;
+      }
+      @media (max-width: 769px) {
+         font-size: 14px;
+      }
+   }
+}
 
 
 
