--- a/css/style.css
+++ b/css/style.css
@@ -443,10 +443,6 @@ body {
 }
 
 /*================Shore===============================*/
-.page__shore {
-  background-color: black;
-}
-
 .shore__container {
   position: relative;
 }
@@ -461,7 +457,7 @@ body {
       -ms-flex-align: start;
           align-items: start;
   padding: 0px 0px 40px 0px;
-  background: radial-gradient(ellipse at center, rgba(125, 126, 125, 0.3) 0%, rgba(110, 111, 110, 0.3) 8%, rgba(24, 24, 24, 0.9) 54%, rgba(0, 0, 0, 0.9) 67%, rgba(0, 0, 0, 0.9) 100%);
+  background: radial-gradient(circle at 50% 50%, #171919 0%, rgba(23, 25, 25, 0) 0%, #171919 69%);
 }
 
 @media (max-width: 768px) {
@@ -533,8 +529,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: all ease 0.1s;
-  transition: all ease 0.1s;
 }
 
 .shore__places {
@@ -882,8 +876,6 @@ body {
   height: 3px;
   background-color: #fff;
   border-radius: 3px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
 }
 
 .shore-aside__hide-menu::after, .shore-aside__hide-menu::before {
@@ -1432,7 +1424,7 @@ body {
 }
 
 .info-slides__maps-box {
-  max-width: 78.68%;
+  max-width: 61.369%;
   overflow: hidden;
 }
 
@@ -1508,6 +1500,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  z-index: 20;
 }
 
 .info-slides__arrow-left {
@@ -2233,7 +2226,7 @@ body {
 
 .beach-slider__arrows {
   position: absolute;
-  top: -30px;
+  top: -50px;
   right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2248,8 +2241,7 @@ body {
 }
 
 .beach-slider__right-arrow {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  padding: 10px;
   margin: 0px 20px 0px 0px;
 }
 
@@ -2491,8 +2483,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   opacity: 0;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
 }
 
 .travel__main-content-active {
@@ -3074,8 +3064,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
   position: relative;
 }
 
@@ -3473,8 +3461,6 @@ body {
   line-height: 22px;
   text-align: right;
   letter-spacing: 8px;
-  -webkit-transition: 0s;
-  transition: 0s;
   text-transform: uppercase;
   color: #FFFFFF;
   mix-blend-mode: normal;
@@ -3740,8 +3726,6 @@ body {
 
 .shop__main-content {
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
   position: relative;
   z-index: 4;
 }
